--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
     margin: 5px;
     padding: 10px;
 }
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
@@ -9,6 +10,7 @@ body {
     color: rgb(16, 68, 114);
     background-color: #f4f3f0;
 }
+
 h1 {
     color: rgb(16, 68, 114);
     align-items: center;
@@ -19,9 +21,10 @@ h1 {
     padding: 5px;
     margin-top: -150px;
 }
+
 .logo {
     width: 280px;
-    margin-left:0px;
+    margin-left: 0px;
     display: inline-block;
     margin-top: 10px;
     margin-right: 1200px;
@@ -29,6 +32,7 @@ h1 {
     z-index: 1;
     margin-top: 0;
 }
+
 .grid,
 .grid2 {
 
@@ -37,6 +41,7 @@ h1 {
     margin-right: 300px;
     margin-top: 0;
 }
+
 #mensagem,
 #mensagem-cifrada {
     background-color: #eb9b6691;
@@ -45,21 +50,24 @@ h1 {
     width: 300px;
     opacity: 40%;
     border-radius: 12px;
-    border:2px solid blue  
+    border: 2px solid blue
 }
-#input-decifrar, #resultado-decifragem {
+
+#input-decifrar,
+#resultado-decifragem {
     background-color: #eb9b6691;
     padding: 20px;
     height: 120px;
     width: 300px;
     opacity: 40%;
     border-radius: 12px;
-    border:2px solid blue  
+    border: 2px solid blue
 }
 
-#btn-cifrar, #btn-decifrar {
+#btn-cifrar,
+#btn-decifrar {
     justify-content: center;
-   margin: auto;
+    margin: auto;
 }
 
 .footer {
